# better-shuffle

./: README.md
Client/BetterMusicPlayer/: BetterMusicPlayerApp.swift
Client/BetterMusicPlayer.xcodeproj/: project.pbxproj
Client/BetterMusicPlayer.xcodeproj/project.xcworkspace/xcuserdata/johnbutler.xcuserdatad/: UserInterfaceState.xcuserstate
Client/BetterMusicPlayer.xcodeproj/xcuserdata/johnbutler.xcuserdatad/xcschemes/: xcschememanagement.plist
Client/BetterMusicPlayer/Behavior/: Auth.swift  ShufflableTracklist.swift  ShuffleEntry.swift  SpotifyActions.swift
Client/BetterMusicPlayer/Behavior/Types/: Album.swift  Artist.swift  CoreTypes.swift  Device.swift  Episode.swift  Image.swift  PlaybackState.swift  Track.swift
Client/BetterMusicPlayer/Environment/: Environment.swift
Client/BetterMusicPlayer/View/: ContentList.swift  ContentView.swift  PlayerBar.swift  PlaylistCard.swift  SearchCard.swift
Client/BetterMusicPlayerTests/: BetterMusicPlayerTests.swift
Client/BetterMusicPlayerUITests/: BetterMusicPlayerUITests.swift  BetterMusicPlayerUITestsLaunchTests.swift
Server/: .gitignore  Cargo.toml
Server/src/: auth.rs  core_types.rs  env.rs  main.rs  shufflable_tracklist.rs  spotify_actions.rs  spotify_uri_bindings.rs
Server/src/core_types/: album.rs  artist.rs  context.rs  device.rs  episode.rs  image.rs  playback_state.rs  track.rs
Server/src/shufflable_tracklist/: shuffle_entry.rs
