[package]
name = "spotify-scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
rocket = "0.5.1"
serde_json = "1.0.145"
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4"] }
http = "1.3.1"
codes-iso-3166 = { version = "0.1.5", features = ["serde"] }
codes-iso-639 = { version = "0.1.5", features = ["serde"] }
chrono = "0.4.44"
